--- a/src/app/emstree/emstree.component.html
+++ b/src/app/emstree/emstree.component.html
@@ -7,7 +7,7 @@
                         <b style="margin-left: 5px;  white-space: nowrap; ">{{ar[0].floor}}</b>
                         <div class="line">
                             <ul class="connected-dots" *ngFor="let ar1 of ar">
-                                <li style="white-space: nowrap;"  [ngStyle]="{'color': ar1.alert > 8 ? 'red': ar1.alert < 3 ?'green':'black'}" > <span [ngClass]="{'blinkr':ar1.alert>8,'blink':ar1.alert < 3 }" >&#9673;</span>  {{ar1.meterName}}</li>
+                                <li class="custom-tooltip" [matTooltip]="getAlertCount(ar1)" style="white-space: nowrap;"  [ngStyle]="{'color': ar1.alert > 8 ? 'red': ar1.alert < 3 ?'green':'black'}" > <span [ngClass]="{'blinkr':ar1.alert>8,'blink':ar1.alert < 3 }" >&#9673;</span>  {{ar1.meterName}}</li>
                             </ul>
                         </div>
                     </div>
