--- a/src/app/emstree/emstree.component.scss
+++ b/src/app/emstree/emstree.component.scss
@@ -90,3 +90,46 @@
   .blinkr {
 	animation: blink 0.4s infinite;
   }
+
+  /* Custom styles for MatTooltip */
+/* Custom Tooltip Styles */
+.custom-tooltip {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+  }
+  
+  .custom-tooltip .tooltip-text {
+	visibility: hidden;
+	width: 200px;
+	background-color: #000;
+	color: #fff;
+	text-align: center;
+	border-radius: 4px;
+	padding: 8px;
+	position: absolute;
+	z-index: 1;
+	bottom: 125%;
+	left: 50%;
+	transform: translateX(-50%);
+	opacity: 0;
+	transition: opacity 0.3s;
+  }
+  
+  .custom-tooltip:hover .tooltip-text {
+	visibility: visible;
+	opacity: 1;
+  }
+  
+  .custom-tooltip .tooltip-text::after {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	margin-left: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: #000 transparent transparent transparent;
+  }
+  
+  
