--- a/src/app/ems-individual-dashboard/ems-individual-dashboard.component.scss
+++ b/src/app/ems-individual-dashboard/ems-individual-dashboard.component.scss
@@ -4,7 +4,7 @@
 
 .table-container {
   max-height: 167px;
-  overflow-y: auto;
+  
 }
 
 .example-container {
@@ -24,7 +24,7 @@
 
 .cell {
   color: red; /* Cell text color */
-  padding: 8px 16px; /* Cell padding */
+  padding: 0px 3px; /* Cell padding */
 }
 
 .header-row {
@@ -119,7 +119,7 @@ height: 92vh;
       width: 100%;
   }
   .mat-header-cell, .mat-cell {
-      min-width: 190px;
+      min-width: 171px;
       color:white;
      
   }
@@ -232,8 +232,7 @@ height: 92vh;
 
 table {
   border-width: 1px; 
-  border: 1px solid white;
-  padding: 10px;
+  
   text-align: center;
  
 }
@@ -245,4 +244,7 @@ td, th {
 
   margin-left: 5px;
   border: 1px solid white;
+}
+.td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
+  padding-left: 23px;
 }
