--- a/src/app/ems/ems.component.html
+++ b/src/app/ems/ems.component.html
@@ -10,16 +10,16 @@
                     <mat-card-content style="color: white;">
                         <div class="row" style="text-align: center;">
                             <div class="col-md-6"
-                                style="margin-top: 3%;font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 18px;">
-                                {{KWHValuer}} <a style="font-size: 12px;">KWH</a><br>
+                                style="margin-top: 3%;font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 22px;">
+                                {{KWHValuer}} <a style="font-size: 8px;">KWH</a><br>
                                 <div
                                     style="font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 12px;">
                                     Total Energy Received <br>In Current Month</div>
                             </div>
 
                             <div class="col-md-6"
-                                style="margin-top: 3%; font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 18px;">
-                               {{totalkwhcurrentmonth}} <a style="font-size: 12px;">KWH</a><br>
+                                style="margin-top: 3%; font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 22px;">
+                               {{totalkwhcurrentmonth}} <a style="font-size: 8px;">KWH</a><br>
                                 <div
                                     style="font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 12px;">
                                     Total Energy Consumed <br>In Current Month</div>
@@ -28,8 +28,8 @@
                         <div class="row"
                             style="text-align: center;margin-top: 1%; font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 15px;">
                             <div class="col-md-12"
-                                style="font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 18px;">
-                                {{KWHValuel}} <a style="font-size: 12px;">KWH</a><br>
+                                style="font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 22px;">
+                                {{KWHValuel}} <a style="font-size: 8px;">KWH</a><br>
                                 <div
                                     style="font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 12px;">
                                     Total Energy Loss <br>In Current Month</div>
@@ -49,7 +49,7 @@
                 <mat-card class="padding">
                     <mat-card-content>
                         <div
-                            style="margin-top:13px;text-align: center;font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 18px;">
+                            style="margin-top:13px;text-align: center;font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 22px;">
                             {{pf}} <br>
                             <div
                                 style="font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 12px;">
@@ -57,7 +57,7 @@
                         </div>
                         <div style="background-color: #1B1C30;margin-top: 9%; height: 2px; width: 100%;"></div>
                         <div
-                            style="margin-top:5%;text-align: center;font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 18px;">
+                            style="margin-top:5%;text-align: center;font-family:RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 22px;">
                             <span>&#8377;{{cost}}</span> <br>
                             <div
                                 style="font-family: RooneySans-Regular, 'Lucida Grande', 'Lucida Sans Unicode', 'Trebuchet MS', sans-serif; font-size: 12px;">
@@ -92,23 +92,23 @@
             </div>
             <div class="col-md-3 Mpadding">
                 <mat-card class="Mpadding" style="max-height: 231px; overflow-y: auto;">
-                    <mat-card-content>
-                        <div class="static-text">Realtime Alerts</div>
-                        <div class="table-container">
-                          <table mat-table [dataSource]="myData" matSort class="example-container mat-elevation-z8">
-                            <ng-container *ngFor="let col of heading_dummy_alert" [matColumnDef]="col">
-                              <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">{{ col }}</th>
-                              <td mat-cell *matCellDef="let element" class="cell">{{ element[col] }}</td>
-                            </ng-container>
-                  
-                            <tr mat-header-row *matHeaderRowDef="heading_dummy_alert" class="header-row"></tr>
-                            <tr mat-row *matRowDef="let row; columns: heading_dummy_alert"></tr>
-                          </table>
-                          <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
-                        </div>
-                      </mat-card-content>
+                  <mat-card-content>
+                    <div class="static-text">Realtime Alerts</div>
+                    <div class="table-container small-table">
+                      <table mat-table [dataSource]="myData" matSort class="example-container mat-elevation-z8">
+                        <ng-container *ngFor="let col of heading_dummy_alert" [matColumnDef]="col">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">{{ col }}</th>
+                          <td mat-cell *matCellDef="let element" class="cell">{{ element[col] }}</td>
+                        </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="heading_dummy_alert" class="header-row"></tr>
+                        <tr mat-row *matRowDef="let row; columns: heading_dummy_alert"></tr>
+                      </table>
+                      <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+                    </div>
+                  </mat-card-content>
                 </mat-card>
-            </div>
+              </div>
+              
         </div>
 
 
